# DuplicatedCodeDetector

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  ClearComments.cpp  ClearComments.hpp  CodeBlock.hpp  CodeLine.hpp  Common.hpp  Config.hpp  CurlyBracesFormatter.cpp  CurlyBracesFormatter.hpp  DuplicatedCodeBlocks.cpp  DuplicatedCodeBlocks.hpp  DuplicatedCodeBlocksBuilder.cpp  DuplicatedCodeBlocksBuilder.hpp  DuplicatedCodeBlocksBuilderFactory.cpp  DuplicatedCodeBlocksBuilderFactory.hpp  DuplicatedCodeBlocksDetector.cpp  DuplicatedCodeBlocksDetector.hpp  FileReader.cpp  FileReader.hpp  GetCodeFileNames.cpp  GetCodeFileNames.hpp  IDuplicatedCodeBlocks.hpp  IDuplicatedCodeBlocksBuilder.hpp  IDuplicatedCodeBlocksBuilderFactory.hpp  IFileReader.hpp  ILinesDecorator.hpp  Json.cpp  Json.hpp  Main.cpp  MainArgsParser.cpp  MainArgsParser.hpp  RemoveEmptyLine.cpp  RemoveEmptyLine.hpp  SpaceFormatter.cpp  SpaceFormatter.hpp
ut/cases/: ClearCommentsTestSuite.cpp  CurlyBracesFormatterTestSuite.cpp  DuplicatedCodeBlocksBuilderTestSuite.cpp  DuplicatedCodeBlocksDetectorTestSuite.cpp  DuplicatedCodeBlocksTestSuite.cpp  DuplicatedCodeBlocksTestSuiteExpect.json  FileReaderTestSuite.cpp  GetCodeFileNamesTestSuite.cpp  RemoveEmptyLinesTestSuite.cpp  SpaceFormatterTestSuite.cpp  TestCommon.cpp  TestCommon.hpp
ut/cases/mock/: DuplicatedCodeBlocksBuilderFactoryMock.hpp  DuplicatedCodeBlocksBuilderMock.hpp  DuplicatedCodeBlocksMock.hpp  FileReaderMock.hpp
